force-app/main/default/objects/Accesorios__c/Accesorios__c.object-meta.xml
<CustomObject>
    <label>Accesorio</label>
    <nameField>
        <label>Nombre de Accesorios Despachados</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accesorios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>