force-app/main/default/objects/Accesorios__c/fields/CantidadMinima__c.field-meta.xml
<CustomField>
    <fullName>CantidadMinima__c</fullName>
    <description>Variable original ifeule .</description>
    <label>Cantidad mínima permitida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>