force-app/main/default/objects/Accesorios__c/fields/CodigoCompania__c.field-meta.xml
<CustomField>
    <fullName>CodigoCompania__c</fullName>
    <description>Variable original icompan .</description>
    <label>Código de la compañía</label>
    <length>16</length>
    <type>Text</type>
</CustomField>