force-app/main/default/objects/Accesorios__c/fields/CodigoParte__c.field-meta.xml
<CustomField>
    <fullName>CodigoParte__c</fullName>
    <description>Variable original inopar .</description>
    <externalId>true</externalId>
    <label>Código de la parte</label>
    <length>50</length>
    <type>Text</type>
</CustomField>