force-app/main/default/objects/Accesorios__c/fields/CodParteEquivalente__c.field-meta.xml
<CustomField>
    <fullName>CodParteEquivalente__c</fullName>
    <description>Variable original inpare .</description>
    <label>Código de la parte equivalente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>