force-app/main/default/objects/Accesorios__c/fields/Compa_a_UDC__c.field-meta.xml
<CustomField>
    <fullName>Compa_a_UDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compañía UDC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Catalogo_UDC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Companias</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Catalogo_UDC__c</referenceTo>
    <relationshipLabel>Accesorios</relationshipLabel>
    <relationshipName>Accesorios</relationshipName>
    <type>Lookup</type>
</CustomField>