force-app/main/default/objects/Accesorios__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Variable original idescr .</description>
    <label>Descripción del Accesorio</label>
    <type>TextArea</type>
</CustomField>