force-app/main/default/objects/Accesorios__c/fields/DescripcionAmplia__c.field-meta.xml
<CustomField>
    <fullName>DescripcionAmplia__c</fullName>
    <description>Variable original idesci .</description>
    <label>Descripción amplia del accesorio</label>
    <type>TextArea</type>
</CustomField>