force-app/main/default/objects/Accesorios__c/fields/FechaInclusion__c.field-meta.xml
<CustomField>
    <fullName>FechaInclusion__c</fullName>
    <description>Variable original ifechi1 .</description>
    <label>Fecha de Inclusión</label>
    <type>Date</type>
</CustomField>