force-app/main/default/objects/Accesorios__c/fields/FechaModificacion__c.field-meta.xml
<CustomField>
    <fullName>FechaModificacion__c</fullName>
    <description>Variable original ifecmod .</description>
    <label>Fecha de Modificación</label>
    <type>Date</type>
</CustomField>