force-app/main/default/objects/Accesorios__c/fields/NombreCompania__c.field-meta.xml
<CustomField>
    <fullName>NombreCompania__c</fullName>
    <description>Variable original compañia .</description>
    <label>Nombre de la compañía</label>
    <length>100</length>
    <type>Text</type>
</CustomField>