force-app/main/default/objects/Accesorios__c/fields/Precio__c.field-meta.xml
<CustomField>
    <fullName>Precio__c</fullName>
    <description>Variable original iprven .</description>
    <label>Precio del accesorio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>