force-app/main/default/objects/Accesorios__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CodigoParte__c</columns>
    <columns>CodParteEquivalente__c</columns>
    <columns>DescripcionAmplia__c</columns>
    <columns>CantidadMinima__c</columns>
    <columns>Precio__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>